--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -156,15 +156,16 @@
     {\href{https://lf1.io/}{LF1 GmbH}}{Berlin, Germany}
     {CEO and co-founder}{2019 - present}
     \begin{itemize}
-    \item Developed an end-to-end deep learning based search and navigation system `\href{https://www.alephsearch.com/}{Aleph Search}' for e-Commerce
+    \item Bootstrapped startup to 30.000 EUR monthly revenue within 1.5 years
+    \item Programmed, as a team of 2, an end-to-end deep learning based search and navigation system `\href{https://www.alephsearch.com/}{Aleph Search}' for e-Commerce
     \item System comprised text-search, similar product recommendation, reverse image search,
     shop-the-look, tagging
     \item System was acquired by Attraqt PLC in 2020 in an IP-transfer share deal
     \item System is now in production at the top e-Commerce websites in Europe, including, Adidas, Asos, Waitrose, Screwfix
     \item Was highly involved in the integration process of the live system
     \item Provided technical direction and managed team of 5 researchers and developers
-    \item Created the open source project PADL "pipeline abstractions for deep learning"
-    \item Prototyped a novel interactive system for converting audio into video "Sheen AI"
+    \item Created the open source project PADL `pipeline abstractions for deep learning'
+    \item Prototyped a novel interactive system for converting audio into video `Sheen AI'
     \end{itemize}
 
     \resumeSubheading
